applications/quake/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: quake
    labels:
        name: quake
